# vnc-automate

./: README.md  _custom_build.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/vncautomate/: client.py  helper.py  session.py
