[metadata]
name = vnc-automate
author = Univention GmbH
author_email = packages@univention.de
description = GUI test framework for Python
long_description = file:README.md
long_description_content_type = "text/markdown"
url = https://git.knut.univention.de/univention/vnc-automate/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Testing
license = GNU Affero General Public License v3
license_files =
    debian/copyright
platforms=
    any

[options]
zip_safe = False
# scripts =
package_dir =
    =src
packages =
    vncautomate
setup_requires =
    setuptools>=18.0
    cython==3.0.10
install_requires =
    numpy==1.26.4
    Pillow
    scipy
    Twisted
    vncdotool>=1.2.0
    lxml
    PyYAML
# tests_require =
# test_suite =


[options.entry_points]
console_scripts =
    vnc-automate = vncautomate.cli:main
